--- a/app/src/main/res/layout/main_list_item.xml
+++ b/app/src/main/res/layout/main_list_item.xml
@@ -19,12 +19,21 @@
 
     </data>
 
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <androidx.cardview.widget.CardView
-        android:id="@+id/item_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="@{(v) -> clickEvent.onItemClicked(position)}">
+        android:layout_margin="8dp"
+        android:onClick="@{(v) -> clickEvent.onItemClicked(position)}"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="5dp"
+        app:cardPreventCornerOverlap="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -45,6 +54,8 @@
         android:id="@+id/item_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:textSize="14sp"
         android:text="@{event.getText()}"
         android:onClick="@{(v) -> clickEvent.onItemClicked(position)}"
         app:layout_constraintTop_toBottomOf="@id/item_image"
@@ -56,4 +67,5 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
+    </LinearLayout>
 </layout>
