--- a/app/src/main/res/layout/details_fragment.xml
+++ b/app/src/main/res/layout/details_fragment.xml
@@ -59,6 +59,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:gravity="center"
+        android:layout_margin="8dp"
         />
     <TextView
         android:id="@+id/details_url"
@@ -70,7 +71,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:gravity="center"
+        android:layout_margin="8dp"
         android:layout_marginBottom="24dp"
+        
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
