--- a/app/src/main/res/layout/details_fragment.xml
+++ b/app/src/main/res/layout/details_fragment.xml
@@ -63,9 +63,17 @@
     app:layout_constraintEnd_toEndOf="parent"
     android:gravity="center"
     />
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/details_title"
+        app:layout_constraintBottom_toTopOf="@id/details_url"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="8dp">
     <TextView
         android:id="@+id/details_content"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@{event.getContent()}"
 
@@ -76,9 +84,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:gravity="center"
-        android:layout_margin="8dp"
         />
-
+    </ScrollView>
 
 
     <TextView
