--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="greyish_brown">#4c4c4c</color>
     <color name="grey_bg">#f2f2f2</color>
+    <color name="white">#ffffff</color>
 </resources>
